# ask-dcnc

./: .dockerignore  .env  .env.sample  .gitattributes  .gitignore  Dockerfile  docker-compose.yaml  loguru_config.py  pyproject.toml  readme.md  requirements.txt  streamlit_app.py
.streamlit/: config.toml
ask_dcnc/: __init__.py  agent.py  client.py  db.py  html.py  prompt.py  session.py  sql.py  ui.py
bedrock/: __init__.py  module.py  session.py
data/: db.sqlite  dcnc.sqlite  sql_prompt.md  system_prompt.md
data/scripts/: find_valid_courses.py  parse_sitemap.py  readme.md  scrape_courses.py  scrape_program_details.py
pages/: 1_ask.py  2_about.py
prompts/: system.md
